--- a/HA_DSC510/Understanding_9_3.ipynb
+++ b/HA_DSC510/Understanding_9_3.ipynb
@@ -31,10 +31,58 @@
     "\n",
     "## Semantic Errors\n",
     "\n",
-    "Lastly, the IDE doesn't tell anything wrong and the program runs without any exception, but the results are not what we first designed. That's why this type of error is the hardest one to catch. The first thing we would need to do is to compare the requirements against the outcomes out of the program. The best way to do so efficiently is to break the entire code into smaller building blocks and set up a test case for each building block. Each building block should produce the desired outcomes, otherwise the building block would have semantic errors in it. Then, break the building block causing the error even further down to smaller components and repeat unit testing on each components. Factoring and rewriting codes simpler would be a good practice.\n"
+    "Lastly, the IDE doesn't tell anything wrong and the program runs without any exception, but the results are not what we first designed. That's why this type of error is the hardest one to catch. The first thing we would need to do is to compare the requirements against the outcomes out of the program. The best way to do so efficiently is to break the entire code into smaller building blocks and set up a test case for each building block. Each building block should produce the desired outcomes, otherwise the building block would have semantic errors in it. Then, break the building block causing the error even further down to smaller components and repeat unit testing on each components. Factoring and rewriting codes simpler would be a good practice."
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Try and Exception Statement\n",
+    "\n",
+    "The basic syntax of try and exception statement is shown below:\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Exception happens\n",
+      "division by zero\n",
+      "Reassignment values to variables\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "a = 8\n",
+    "b = 0\n",
+    "try:\n",
+    "    c = a / b\n",
+    "except Exception as e:\n",
+    "    print(\"Exception happens\")\n",
+    "    print(e)\n",
+    "finally:\n",
+    "    print(\"Reassignment values to variables\")\n",
+    "    \n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
    }
   }
  ],
