--- a/HA_DSC510/Interest_10_2.ipynb
+++ b/HA_DSC510/Interest_10_2.ipynb
@@ -213,6 +213,8 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Conclusion \n",
+    "\n",
     "While using socket module is a way to set up a connection between the client and server and send/receive requests/results, the codes is not really intuitive and easy to understand. More intuitive moduels such as urllib and request were introduced to make it easy for programmers to retrieve data from the web.\n",
     "\n",
     "References\n",
