--- a/HA_DSC510/Interest_11_2.ipynb
+++ b/HA_DSC510/Interest_11_2.ipynb
@@ -11,8 +11,73 @@
    "source": [
     "# Classes and Objects\n",
     "\n",
-    "\n"
+    "A class is an user-defined compound data type. Using class, we can develop a complicated data structure and create many instances of the class(objects) to store status in members(attributes or fields) and run actions on them. The member of a class is called a field and the function to modify the status of the field or take an actions is called a method. Let's create a Point class and instantiate it."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "<__main__.Point object at 0x0644D190>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "class Point(object):\n",
+    "    pass\n",
+    "\n",
+    "point1 = Point()\n",
+    "print(point1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Point class has been created, but it does not have any member fields and methods yet. In order to instantiate the class, we would use Point() which is called a constructor. The reference id has been created and assigned to point1 variable.\n",
+    "\n",
+    "In order to add attributes(members) to the Point class object, we would use dot notation. A class has __dict__ special attribute which retrieve members in a dictionary type.\n",
+    " "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "{'x': 3.4, 'y': 5.1}\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "point1.x = 3.4\n",
+    "point1.y = 5.1\n",
+    "\n",
+    "print(point1.__dict__)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
   }
  ],
  "metadata": {
