--- a/HA_DSC510/Understanding_11_3.ipynb
+++ b/HA_DSC510/Understanding_11_3.ipynb
@@ -159,6 +159,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As we can see in the code, __add__ method overloaded the '+' operator. The method receives two object parameters (self, other) and add member variables of two objects, then return it. This is a very useful technique where we define a new data structure and still want to perform + operation on those data types.\n",
+    "\n",
     "References\n",
     "\n",
     "Severance. C. R. (2009). Python for Everybody. http://do1.dr-chuck.com/pythonlearn/EN_us/pythonlearn.pdf  \n",
