--- a/LOOS_DSC510/Assignment 12.1
+++ b/LOOS_DSC510/Assignment 12.1
@@ -1,3 +1,5 @@
+#header and comments
+
 import requests
 import json
 import string
@@ -29,6 +31,7 @@ def current_cond(entry):
   headers={'cache-control':'no-cache'}
   querystring=input_check(entry)
 
+  #try block for connection
   response=requests.request("GET",url,headers=headers,params=querystring)
 
   dic=(response.text)
@@ -54,6 +57,7 @@ def forecast(entry):
   headers={'cache-control':'no-cache'}
   querystring=input_check(entry)
 
+  #try block for connection
   response=requests.request("GET",url,headers=headers,params=querystring)
 
   dic=(response.text)
